<resources>
    <string name="app_name">VoD</string>
    <string name="browse_title"><![CDATA[Videos by RT-RK]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>
    <string name="choose_browser">Please choose a browser</string>
    <string name="imdb_default_search_url">http://www.imdb.com/find?q=</string>

    <!-- Error messages -->
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>


    <!-- NavigationView Side Panel-->
    <string name="navpanel_title">Title:</string>
    <string name="navpanel_duration">Duration:</string>
    <string name="navpanel_genre">Genre:</string>
    <string name="navpanel_rating">Rating:</string>
    <string name="navpanel_price">Price:</string>


    <!-- Details Activity -->
    <string name="btn_details_previous">Previous</string>
    <string name="btn_details_next">Next</string>

    <string name="tv_details_genre">Genre:</string>
    <string name="tv_details_director">Director:</string>
    <string name="tv_details_stars">Stars:</string>
    <string name="tv_details_rating">Rating:</string>
    <string name="tv_details_price">Price:</string>

    <string name="watch_trailer_1">PLAY</string>
    <string name="open_imdb">IMDB</string>

</resources>
