<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/menuToolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/purple_bottom_top_edge_drawable"
        android:orientation="horizontal"
        android:padding="30dip">


        <!-- ******************* Left Pane ************************* -->
        <RelativeLayout
            android:id="@+id/llLeftPane"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="20dip"
            android:layout_weight="2">

            <!-- TODO: Dimensions -->
            <ImageView
                android:id="@+id/ivDetailsMainImage"
                android:layout_width="match_parent"
                android:layout_height="300dip"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnDetailsPrevious"
                    style="@style/CustomButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginRight="10dip"
                    android:layout_weight="1"
                    android:text="@string/btn_details_previous" />

                <Button
                    android:id="@+id/btnDetailsNext"
                    style="@style/CustomButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:text="@string/btn_details_next" />

            </LinearLayout>

        </RelativeLayout>

        <!-- ******************* Left Pane ************************* -->


        <!-- ******************* Right Pane ************************* -->
        <RelativeLayout
            android:id="@+id/llRighttPane"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="50dip"
            android:layout_marginTop="20dip"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvDetailsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dip"
                android:textStyle="bold" />

            <!-- TODO: Add rating and some additional controls below title -->

            <!-- ********************* Navigation Panel ************************* -->
            <LinearLayout
                android:id="@+id/llMovieInfoPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDetailsTitle"
                android:orientation="vertical">

                <!-- Genre -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/DetailsInfoStaticTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_details_genre" />

                    <TextView
                        android:id="@+id/tvDetailsGenre"
                        style="@style/NavPanelDynamicTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <!-- Director -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/DetailsInfoStaticTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_details_director" />

                    <TextView
                        android:id="@+id/tvDetailsDirector"
                        style="@style/NavPanelDynamicTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <!-- Stars -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/DetailsInfoStaticTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_details_stars" />

                    <TextView
                        android:id="@+id/tvDetailsStars"
                        style="@style/NavPanelDynamicTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <!-- Rating -->

                <LinearLayout
                    android:id="@+id/llRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/DetailsInfoStaticTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_details_rating" />

                    <TextView
                        android:id="@+id/tvDetailsRating"
                        style="@style/NavPanelDynamicTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/tvDetailsDescription"
                style="@style/NavPanelDynamicTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llMovieInfoPanel" />

            <Button
                android:id="@+id/btnDetailsImdb"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:text="@string/open_imdb" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- Price -->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dip"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/DetailsInfoStaticTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_details_price" />

                    <TextView
                        android:id="@+id/tvDetailsPrice"
                        style="@style/NavPanelDynamicTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnDetailsPlay"
                    style="@style/CustomButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/watch_trailer_1" />
            </LinearLayout>


        </RelativeLayout>


    </LinearLayout>


</LinearLayout>
