<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/overviewLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_dark"
    android:fitsSystemWindows="true"
    android:theme="@style/Theme.AppCompat">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- TODO: Create toolbar instead
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dip"
            android:paddingTop="20dip"
            android:text="@string/app_name"
            android:textSize="25dip" />-->

        <include
            android:id="@+id/menuToolbar"
            layout="@layout/toolbar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:background="@drawable/purple_bottom_top_edge_drawable"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">

            <android.support.design.widget.NavigationView
                android:id="@+id/menuDrawer"
                android:layout_width="300dip"
                android:layout_height="match_parent"
                android:background="@drawable/purple_rectangle_right_edge_drawable"
                android:choiceMode="singleChoice"
                android:elevation="5dip"
                android:padding="20dip"
                app:itemIconTint="@color/navigation_color_selector"
                app:itemTextColor="#ffffff"
                app:itemBackground="@drawable/grid_color_selector"
                app:menu="@menu/navigation_items">

                <!-- ********************* Navigation Panel ************************* -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@color/purple_dark1"
                    android:orientation="vertical"
                    android:padding="10dip">

                    <!-- Title -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/NavPanelStaticTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/navpanel_title" />

                        <TextView
                            android:id="@+id/navPanelTitle"
                            style="@style/NavPanelDynamicTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <!-- Duration -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/NavPanelStaticTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/navpanel_duration" />

                        <TextView
                            android:id="@+id/navPanelDuration"
                            style="@style/NavPanelDynamicTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <!-- Genre -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/NavPanelStaticTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/navpanel_genre" />

                        <TextView
                            android:id="@+id/navPanelGenre"
                            style="@style/NavPanelDynamicTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <!-- Rating -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/NavPanelStaticTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/navpanel_rating" />

                        <TextView
                            android:id="@+id/navPanelRating"
                            style="@style/NavPanelDynamicTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <!-- Price -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/NavPanelStaticTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/navpanel_price" />

                        <TextView
                            android:id="@+id/navPanelPrice"
                            style="@style/NavPanelDynamicTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/navPanelImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:src="@drawable/lb_ic_replay" />
                    <!-- TODO: Find proper image -->
                </LinearLayout>
                <!-- ********************* Navigation Panel ************************* -->

            </android.support.design.widget.NavigationView>

            <LinearLayout
                android:id="@+id/main_browse_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dip"
                android:layout_toRightOf="@id/menuDrawer"
                android:paddingLeft="10dip"
                android:paddingRight="20dip">

                <GridView
                    android:id="@+id/gridView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:drawSelectorOnTop="true"
                    android:focusable="true"
                    android:gravity="right"
                    android:numColumns="5"
                    android:verticalSpacing="5dp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>